implement movie list

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     />
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/6.6.96/css/materialdesignicons.min.css" integrity="sha512-dAWyuzC1uq8T14qaENg+n0Vc7LkKjbC0FLEmYBRmd+1v74V9I5mCTvPZDclpsgd0FMPcySSMWG/s1yq2pa8MRw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <title>React App</title>
   </head>
