--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,21 @@
       crossorigin="anonymous"
     />
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/6.6.96/css/materialdesignicons.min.css" integrity="sha512-dAWyuzC1uq8T14qaENg+n0Vc7LkKjbC0FLEmYBRmd+1v74V9I5mCTvPZDclpsgd0FMPcySSMWG/s1yq2pa8MRw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/6.6.96/css/materialdesignicons.min.css"
+      integrity="sha512-dAWyuzC1uq8T14qaENg+n0Vc7LkKjbC0FLEmYBRmd+1v74V9I5mCTvPZDclpsgd0FMPcySSMWG/s1yq2pa8MRw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;700&family=Nunito+Sans:wght@400;600;700&family=Oswald:wght@200&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
@@ -44,7 +56,5 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    
-   </body>
+  </body>
 </html>
-
